# tool-rag-experiments

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt  sample_config.yaml
.localtest/: README.md  toolbench_pass_rate_evaluator.py
baseline/: tool_rag.py
evaluator/: README.md  algorithm_factory.py  eval_spec.py  evaluator.py  fac_only_evaluation.py  ollama_maxtool.py  run_experiment.sh  run_experiments.py  run_experiments.sh  stabletb_sample_data.py  test_fac_evaluation.sh  tool_rag_algorithm.py  tool_validation_metrics.py
evaluator/algorithms/: base_retrieval_algorithm.py  baseline_algorithm.py  baseline_no_rag_algorithm.py  basic_tool_rag_algorithm.py  tool2vec_tool_rag_algorithm.py  tool_fetcher_algorithm.py  tool_rag_algorithm.py
evaluator/algorithms/data/: train.json  val.json
evaluator/components/: data_provider.py  llm_provider.py  mcp_proxy.py  mcp_tool_server.py  query_provider.py
evaluator/config/: config_io.py  defaults.py  schema.py
evaluator/interfaces/: algorithm.py  metric_collector.py  tool_rag_algorithm.py
evaluator/metric_collectors/: answer_quality_metric_collector.py  basic_metric_collector.py  efficiency_metric_collector.py  fac_metric_collector.py  stabletoolbench_fac_eval.py  tool_retrieval_metric_collector.py  tool_selection_metric_collector.py
evaluator/ui/: app.py
evaluator/utils/: csv_logger.py  embedding_fine_tuner.py  file_downloader.py  module_extractor.py  parsing_tools.py  server_switcher.py  tool_logger.py  utils.py
fac_evaluation_results/evaluation/: fac_results.csv
old_experiments/src/: main.py  test_runner.py
old_experiments/tool2vec/: mlc.ipynb  tool_refiner.ipynb
src/: main.py  test_runner.py
src/max_tool_experiment/: README.md  custom_fac_eval.py  enhanced_maxtool_experiment.py  experiment_results_langchain_ollama.csv  fac_only_evaluation.py  llm_provider.py  mcp_tool_server.py  ollama_maxtool.py  run_experiment.sh  run_stabletoolbench_eval.py  simplified_toolbench_evaluator.py  stabletoolbench_fac_eval.py  step_by_step_evaluation.py  synthetic_evaluation.py  test_simplified_evaluator.py
src/tools/: info.py
src/utils/: data_loader.py  env.py  singleton.py
stabletoolbench_lib/: openai_key.json
tool2vec/: Embeddings.ipynb  mlc.ipynb
(+54 files in other folders)
