[project]
name = "small-model-experiments-ib"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.3",
    "pandas==2.3.3",
    "python-dotenv==1.1.1",
    "langchain==0.3.27",
    "langchain-openai==0.3.34",
    "langchain-community==0.3.30",
    "langchain-ollama==0.3.10",
    "langchain-mcp-adapters==0.1.11",
    "langgraph==0.6.8",
    "fastmcp>=0.1.0",
    "requests==2.32.5",
    "huggingface-hub>=0.34.0",
    "pymilvus==2.6.0",
    "langchain-core==0.3.78",
    "langchain-huggingface==0.3.1",
    "langchain-milvus==0.2.1",
    "mcp==1.16.0",
    "openai==2.1.0",
    "pydantic==2.11.10",
    "pyyaml==6.0.3",
    "sentence-transformers==5.1.1",
    "torch==2.8.0",
    "uvicorn==0.37.0",
]
